samples/_failures_safe/1761401087_8d8976_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f64c4a75.c: In function ‘main’:
./samples/SAFE/__tmp_f64c4a75.c:155:17: error: expected declaration or statement at end of input
  155 |                 }
      |                 ^
./samples/SAFE/__tmp_f64c4a75.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f64c4a75.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f64c4a75.c:155:17: error: expected declaration or statement at end of input
